# pyg-mongo

./: .gitignore  README.md  requirements.txt  setup.cfg
.pylint.d/: pyg_mongo._reader1.stats  test_q1.stats
conda/: meta.yaml
scripts/: arctic_like.py
src/: setup.py
src/pyg_mongo/: __init__.py  _base_reader.py  _cache.py  _cursor.py  _db_cell.py  _encoders.py  _periodic_cell.py  _q.py  _reader.py  _sql_table.py  _table.py  _types.py  _writers.py  app.py
tests/: test_cursor.py  test_db_cell.py  test_encoders.py  test_get_cell.py  test_mongo.py  test_periodic_cell.py  test_pk_cursor.py  test_q.py  test_reader.py  wordle.py
