[metadata]
name = pyg-mongo
version = 0.0.14
author = Yoav Git
author_email = yoav.git@gmail.com
description = Utilities for data manipulation including creation of DAGs and tables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gityoav/pyg-mongo
project_urls =
    Bug Tracker = https://github.com/gityoav/pyg-mongo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = pyg-base; pymongo; dnspython

[options.packages.find]
where = src